# perfs

./: .gitignore  README.md  model.py  movies_accuracy.md  pyproject.toml
pefts/: __init__.py  __main__.py  dataset.py  eval_on_imdb.py  inference.py  peft.py  train_on_dir.py  train_on_imdb.py  trainer.py
pefts/layers/: __init__.py  loha.py  lokr.py  lora.py
pefts/model/: __init__.py  __main__.py  attention.py  block.py  config.py  feedforward.py  transformer.py
