[tool.poetry]
name = "pefts"
version = "0.1.0"
description = ""
authors = ["rizerphe <44440399+rizerphe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
transformers = "^4.40.0"
datasets = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
